# demo

./: .gitignore  README.md  pyproject.toml  requirements.txt  voice_assistant.py
