[project]
name = "demo"
version = "0.1.0"
description = "全双工实时语音对话系统 - 支持流式STT、LLM、TTS和Barge-in打断"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyaudio>=0.2.14",
    "websockets>=16.0",
    "aiohttp>=3.8.0",
]

[project.scripts]
voice-server = "run_server:main"
voice-client = "run_client:main"
voice-test = "test_system:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
